# fast-data-processing

./: .gitignore  readme.md
dataset/: readme.md
demos/01-different-languages/: run_demos.sh
demos/01-different-languages/python/: main.py
demos/01-different-languages/rust/: Cargo.toml
demos/01-different-languages/rust/src/: main.rs
demos/02-polars-v-pandas/: .gitignore  pyproject.toml
demos/02-polars-v-pandas/src/: pandas_version.py  polars_version.py  run_benchmark.py
demos/03-builtins/: pyproject.toml
demos/03-builtins/src/: const.py  polars_version.py  run_benchmark.py
demos/04-json-decode/: main.py  pyproject.toml
outputs/01/: compile_results.py  python_run_times.csv  rust_run_times.csv
outputs/02/: compile_results.py  run_times.csv
outputs/03/: compile_results.py  run_times.csv
slides/: Makefile  Presentation.md  package-lock.json  styling.css
